--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500&display=swap"
+    rel="stylesheet"
+    />
+    <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>JanTools</title>
   </head>
   <body>
     <div id="root"></div>
